hotPath-volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apiserver
spec:
  containers:
  - name: apiserver
    image: zxcvbnius/docker-demo
    volumeMounts:
    - mountPath: /tmp
      name: tmp-volume
    # 要求 k8s 每次都從倉庫拉image, 無視本機是否已存在映像檔
    imagePullPolicy: Always
  volumes:
    - name: tmp-volume
      hostPath:
        path: /home/hsieh/PracK8S/tmp/
        type: Directory
