my-deployment-with-health-checks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: check-health-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-check-health-deployment
  template:
    metadata:
      labels:
        app: my-check-health-deployment
    spec:
      containers:
      - name: webapp
        image: zxcvbnius/docker-demo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: webapp-port
          containerPort: 3000
        livenessProbe:        
          httpGet:
            # 設定 health checks 要訪問的路徑
            path: /
            # 指定要訪問的 port
            port: webapp-port
          # 設定當 service 剛啟動時，要延遲幾秒再開始做 health check
          initialDelaySeconds: 15
          # 代表每隔幾秒訪問一次，預設值為 10秒
          periodSeconds: 15
          timeoutSeconds: 30
          # 可以設置訪問幾次就代表目前 service 還正常運行
          successThreshold: 1
          # 代表 service 回傳不如預期時，在 Kubernetes 放棄該 container 之前，會嘗試的次數，預設為3次。
          failureThreshold: 3
