my-pod-with-mounting-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod-with-mounting-secret
  labels:
    name: webserver
spec:
  containers:
  - name: demo-pod-with-volume-secret
    image: zxcvbnius/docker-demo
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 3000
    volumeMounts:
      - name: molume-secret
        mountPath: /etc/creds
        readOnly: true
  volumes:
    - name: molume-secret
      secret:
        secretName: demo-secret
