my-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-secret-pod-demo
  labels:
    name: webserver
spec:
  containers:
  - name: demo-secret-pods
    image: zxcvbnius/docker-demo
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 3000
