test.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mb-frontend
  labels:
    app: mb-frontend
spec:
  replicas: 5
  minReadySeconds: 20
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: mb-frontend
    spec:
      restartPolicy: Always
      containers:
        - name: mb-frontend
          image: gcr.io/rd1-resources/melon_front_member-production:latest
          #imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: nginx-config
          configMap: 
            name: mb-frontend-nginx
