golang-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: golang
  template:
    metadata:
      labels:
        app: golang
    spec:
      containers:
      - name: hello-golang
        image: 10.0.2.9/library/hello-go:0.1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      minReadySeconds: 5
      strategy:
        # indicate which strategy we want for rolling update
        type: RollingUpdate
        rollingUpdate:
          maxSurge: 1
          maxUnavailable: 1

---

apiVersion: v1
kind: Service
metadata:
  name: golang-service
spec:
  selector:
    app: golang  # 必須跟deployment相同
  ports:
  - port: 8000
    targetPort: 8080
