ingress_prac.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  apple

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: red.myweb.com
    http:
      paths:
      - path: /
        backend:
          serviceName: red-service
          servicePort: 80
  - host: green.myweb.com
    http:
      paths:
      - path: /
        backend:
          serviceName: green-service
          servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: red-deploy
  namespace: apple
spec:
  replicas: 2
  selector:
    matchLabels:
      app: red-nginx
  template:
    metadata:
      labels:
        app: red-nginx
    spec:
      containers:
      - name: red-nginx-web
        image: jlptf/red
        ports:
        - containerPort: 80

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: green-deploy
  namespace: apple
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green-nginx
  template:
    metadata:
      labels:
        app: green-nginx
    spec:
      containers:
      - name: green-nginx-web
        image: jlptf/green
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: green-service
  namespace: apple
spec:
  selector:
    app: green-nginx
  ports:
  - port: 80
    targetPort: 80
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: red-service
  namespace: apple
spec:
  selector:
    app: red-nginx
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
